--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "scripts": {
     "dev": "NODE_OPTIONS='--es-module-specifier-resolution=node' ts-node --transpile-only src/index.ts",
-    "build": "tsc"
+    "build": "rimraf dist && tsc"
   },
   "dependencies": {
     "bcp-47-match": "^2.0.2",
@@ -32,6 +32,7 @@
     "eslint": "^8.44.0",
     "eslint-config-alloy": "^4.0.0",
     "prettier": "^2.7.1",
+    "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
