--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@algoux/standard-ranklist-utils",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": "bLue",
   "keywords": [
     "standard ranklist",
@@ -24,7 +24,7 @@
     "textcolor": "^1.0.2"
   },
   "devDependencies": {
-    "@algoux/standard-ranklist": "^0.3.2",
+    "@algoux/standard-ranklist": "^0.3.3",
     "@types/node": "^16.18.38",
     "@types/semver": "^7.5.0",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
@@ -47,5 +47,6 @@
   "bugs": {
     "url": "https://github.com/algoux/standard-ranklist-utils/issues"
   },
-  "homepage": "https://github.com/algoux/standard-ranklist-utils#readme"
+  "homepage": "https://github.com/algoux/standard-ranklist-utils#readme",
+  "srkSupportedVersions": ">=0.3.0 <=0.3.3"
 }
