feat: change pkg to support both cjs and mjs

--- a/package.json
+++ b/package.json
@@ -1,39 +1,50 @@
 {
   "name": "@algoux/standard-ranklist-utils",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "author": "bLue",
   "keywords": [
     "standard ranklist",
     "srk",
     "utils"
   ],
-  "type": "module",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.cts",
+  "exports": {
+    "require": {
+      "types": "./dist/index.d.cts",
+      "default": "./dist/index.cjs"
+    },
+    "import": {
+      "types": "./dist/index.d.mts",
+      "default": "./dist/index.mjs"
+    }
+  },
   "files": [
     "dist"
   ],
   "scripts": {
-    "dev": "NODE_OPTIONS='--es-module-specifier-resolution=node' ts-node --transpile-only src/index.ts",
-    "build": "rimraf dist && tsc"
+    "dev": "tsx src/index.ts",
+    "build": "pkgroll && node scripts/postcompile.js"
   },
   "dependencies": {
+    "@types/semver": "^7.5.0",
     "bcp-47-match": "^2.0.2",
     "bignumber.js": "^9.1.1",
     "semver": "^7.5.4",
     "textcolor": "^1.0.2"
   },
   "devDependencies": {
-    "@algoux/standard-ranklist": "^0.3.3",
+    "@algoux/standard-ranklist": "^0.3.4",
     "@types/node": "^16.18.38",
-    "@types/semver": "^7.5.0",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "eslint": "^8.44.0",
     "eslint-config-alloy": "^4.0.0",
+    "pkgroll": "~2.3.0",
     "prettier": "^2.7.1",
     "rimraf": "^5.0.1",
-    "ts-node": "^10.9.1",
+    "tsx": "^4.19.4",
     "typescript": "^4.9.5"
   },
   "peerDependencies": {
@@ -48,5 +59,10 @@
     "url": "https://github.com/algoux/standard-ranklist-utils/issues"
   },
   "homepage": "https://github.com/algoux/standard-ranklist-utils#readme",
-  "srkSupportedVersions": ">=0.3.0 <=0.3.3"
+  "srkSupportedVersions": ">=0.3.0 <0.4.0",
+  "pnpm": {
+    "overrides": {
+      "esbuild": "0.23.1"
+    }
+  }
 }
