--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@algoux/standard-ranklist-utils",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "author": "bLue",
   "keywords": [
     "standard ranklist",
@@ -25,7 +25,7 @@
   ],
   "scripts": {
     "dev": "tsx src/index.ts",
-    "build": "pkgroll && node scripts/postcompile.js"
+    "build": "pkgroll"
   },
   "dependencies": {
     "@types/semver": "^7.5.0",
